--- a/TurnBasedPractice/TurnBasedPractice.csproj
+++ b/TurnBasedPractice/TurnBasedPractice.csproj
@@ -84,6 +84,12 @@
     <Compile Include="Windows\BattleSetup.Designer.cs">
       <DependentUpon>BattleSetup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Windows\BattleSetupV2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\BattleSetupV2.Designer.cs">
+      <DependentUpon>BattleSetupV2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\BattleTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +120,18 @@
     <Compile Include="Windows\NewItem.Designer.cs">
       <DependentUpon>NewItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Windows\UpdateAbilityWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\UpdateAbilityWindow.Designer.cs">
+      <DependentUpon>UpdateAbilityWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\UpdateWeaponsWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\UpdateWeaponsWindow.Designer.cs">
+      <DependentUpon>UpdateWeaponsWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\WeaponSearch.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +154,9 @@
     <EmbeddedResource Include="Windows\BattleSetup.resx">
       <DependentUpon>BattleSetup.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Windows\BattleSetupV2.resx">
+      <DependentUpon>BattleSetupV2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Windows\BattleTest.resx">
       <DependentUpon>BattleTest.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +172,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\NewItem.resx">
       <DependentUpon>NewItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\UpdateAbilityWindow.resx">
+      <DependentUpon>UpdateAbilityWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\UpdateWeaponsWindow.resx">
+      <DependentUpon>UpdateWeaponsWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\WeaponSearch.resx">
       <DependentUpon>WeaponSearch.cs</DependentUpon>
