9/3/2014 I lied, its too much work to re-create from the ground up so we will keep working off of this. Changes: -Made EntityWrapper.cs allow for constructor input of "Player Entity" & "Boss Entity". Separate data files for each. -Adjusted EntityWrapper.cs to reserve IDs when nextID() is called even before trying to save the players using aforementioned ids. -Implemented population functionality for BattleSetupV2.cs on players, bosses & templates. -Implemented player side add to party, delete from pre-mades, add to pre-mades and commit for names & levels. -Modified Party.cs to have an updateEntity method for changing data on the fly -Added JohnHartley/NameGenerator project(from git) as NameGenerator.dll. -Added Method to NameGenerator code to return random first name only. -Made BattleSetupV2.cs (Add) new player to party use NameGenerator.dll to generate a random name for new player entry.
Signed-off-by: Josh <Joshua-Allison@idexx.com>

--- a/TurnBasedPractice/TurnBasedPractice.csproj
+++ b/TurnBasedPractice/TurnBasedPractice.csproj
@@ -39,6 +39,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\GameTools.dll</HintPath>
     </Reference>
+    <Reference Include="NameGenerator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\NameGenerator.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -216,6 +220,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="lib\GameTools.dll" />
+    <Content Include="lib\NameGenerator.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
