--- a/TurnBasedPractice/TurnBasedPractice.csproj
+++ b/TurnBasedPractice/TurnBasedPractice.csproj
@@ -58,13 +58,33 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityClasses\EntityAbstract.cs" />
-    <Compile Include="EntityClasses\EntityTemplate.cs" />
-    <Compile Include="EntityClasses\EntityWrapper.cs" />
+    <Compile Include="EntityClassesV2\EntityTemplateWrapperV2.cs" />
+    <Compile Include="EntityClassesV2\EntityAbstractV2.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="EntityClassesV2\EntityTemplateV2.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="EntityClassesV2\EntityV2.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="EntityClassesV2\EntityWrapperV2.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="EntityClassesV2\Monster.cs" />
+    <Compile Include="EntityClassesV2\PartyV2.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="GameClasses\Battle.cs" />
     <Compile Include="GameClasses\BattleV2.cs" />
     <Compile Include="GameClasses\Game.cs" />
     <Compile Include="NewGameClasses\Effect.cs" />
+    <Compile Include="NewWindows\UpdateEffectList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewWindows\UpdateEffectList.Designer.cs">
+      <DependentUpon>UpdateEffectList.cs</DependentUpon>
+    </Compile>
     <Compile Include="RandomInt.cs" />
     <Compile Include="GuiClasses\ControlWithID.cs">
       <SubType>Component</SubType>
@@ -79,51 +99,19 @@
     <Compile Include="MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="EntityClasses\Party.cs" />
-    <Compile Include="EntityClasses\Entity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Windows\BattleSetup.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Windows\BattleSetup.Designer.cs">
-      <DependentUpon>BattleSetup.cs</DependentUpon>
-    </Compile>
     <Compile Include="NewWindows\BattleSetupV2.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="NewWindows\BattleSetupV2.Designer.cs">
       <DependentUpon>BattleSetupV2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Windows\BattleTest.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Windows\BattleTest.Designer.cs">
-      <DependentUpon>BattleTest.cs</DependentUpon>
-    </Compile>
     <Compile Include="Windows\BattleTest2.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Windows\BattleTest2.Designer.cs">
       <DependentUpon>BattleTest2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\NewEntity.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Windows\NewEntity.Designer.cs">
-      <DependentUpon>NewEntity.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\NewEntityTemplate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Windows\NewEntityTemplate.Designer.cs">
-      <DependentUpon>NewEntityTemplate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\NewItem.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Windows\NewItem.Designer.cs">
-      <DependentUpon>NewItem.cs</DependentUpon>
     </Compile>
     <Compile Include="NewWindows\UpdateAbilityWindow.cs">
       <SubType>Form</SubType>
@@ -158,6 +146,9 @@
     <EmbeddedResource Include="MainMenu.resx">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NewWindows\UpdateEffectList.resx">
+      <DependentUpon>UpdateEffectList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -168,27 +159,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Windows\BattleSetup.resx">
-      <DependentUpon>BattleSetup.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="NewWindows\BattleSetupV2.resx">
       <DependentUpon>BattleSetupV2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Windows\BattleTest.resx">
-      <DependentUpon>BattleTest.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Windows\BattleTest2.resx">
       <DependentUpon>BattleTest2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Windows\NewEntity.resx">
-      <DependentUpon>NewEntity.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Windows\NewEntityTemplate.resx">
-      <DependentUpon>NewEntityTemplate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Windows\NewItem.resx">
-      <DependentUpon>NewItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewWindows\UpdateAbilityWindow.resx">
       <DependentUpon>UpdateAbilityWindow.cs</DependentUpon>
