9/19/2014 -Smoothed out UpdateCharacterClassWindow.cs -Coded all but remove ability in UpdateCharacterClassWindow.cs
Signed-off-by: Josh <Joshua-Allison@idexx.com>

--- a/TurnBasedPractice/TurnBasedPractice.csproj
+++ b/TurnBasedPractice/TurnBasedPractice.csproj
@@ -207,6 +207,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="Properties\DataSources\TurnBasedPractice.GameClasses.Ability.datasource" />
     <None Include="Properties\DataSources\TurnBasedPractice.GameClasses.CharacterClass.datasource" />
     <None Include="Properties\DataSources\TurnBasedPractice.GameClasses.Spell.datasource" />
     <None Include="Properties\DataSources\TurnBasedPractice.ItemClasses.Item.datasource" />
